# ungula-core

./: API.md  CMakeLists.txt  README.md  library.json  library.properties
src/: ungula_core.h
src/preferences/core/: esp32_preferences.cpp  esp32_preferences.h  i_preferences.h
src/preferences/programs/: program_store.h
src/system/: chip_info.cpp  chip_info.h  health_monitor.cpp  health_monitor.h  system_reboot.cpp  system_reboot.h
src/time/: i_time_provider.h  time_control.cpp  time_control.h  time_format.h  timezones.h
src/ungula/: core.h
src/ungula/core/control/: pid.h
src/ungula/core/preferences/: nvs_config_store.h  preferences.h
src/ungula/core/preferences/core/: esp32_preferences.cpp  esp32_preferences.h  i_preferences.h
src/ungula/core/preferences/programs/: program_store.h
src/ungula/core/preferences/tools/programs/: program_store.h
src/ungula/core/system/: chip_info.cpp  chip_info.h  health_monitor.cpp  health_monitor.h  system_reboot.cpp  system_reboot.h
src/ungula/core/time/: i_time_provider.h  time.h  time_control.h  time_format.h  timezones.h
src/ungula/core/util/: crc32.h  queue.h  string_types.h  string_utils.h  types.h
src/util/: crc32.h  queue.h  string_types.h  string_utils.h  types.h
tests/: CMakeLists.txt  check_preferences_alias_dispatch.cpp  test_crc32.cpp  test_nvs_config_store.cpp  test_pid.cpp  test_preferences_layout.cpp  test_queue.cpp  test_string_utils.cpp  test_time_control.cpp  test_time_format.cpp  test_types.cpp
tests/ArduinoStub/: Arduino.h  nvs.h
